data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1895.wast
;; 6. **Forward Branch Type Compliance**:    - **Description**: Create `br_if` to jump forward to a block that consumes `i32` and `i64`, but provide only `i32`.    - **Constraint**: Ensures forward jumps properly comply with expected input types.    - **Differential Behavior**: WASM halts on mismatch, while incorrect stack management in wizard_engine might allow faulty execution.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32 i64)
        (drop (br_if 0 (i32.const 1)))
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)